Added Comment API Endpoints, Comment Policy, and Controller
