# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\YoutubeVideoController;
 use App\Http\Controllers\ChannelController;
+use App\Http\Controllers\CommentController;
 use App\Models\YoutubeVideo;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -30,6 +31,7 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('auth')->group(function () {
     Route::post('/register', [AuthController::class, 'register']);
     Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/logout', [AuthController::class, 'logout']);
     Route::get('/channel', [AuthController::class, 'channel']);
     // Route::put('channel', [ChannelController::class, 'update']);
     Route::match(['put', 'patch'], '/channel', [ChannelController::class, 'update']);
@@ -40,6 +42,12 @@ Route::apiResource('/youtubeVideos', YoutubeVideoController::class);
 
 // Added a method to retrieve comments belong to a channel
 Route::get('/youtubeVideos/{id}/comments', [YoutubeVideoController::class, 'showComments'])->name('showComments');
+Route::post('/youtubeVideos/{id}/comment', [CommentController::class, 'store']);
+
+Route::prefix('comments')->group(function() {
+    Route::get('channel', [CommentController::class, 'showChannelComments']);
+    Route::delete('{id}', [CommentController::class, 'destroy']);
+});
 
 // Created channel URL with only index and show function attached
 Route::apiResource('/channels', ChannelController::class)->only(['index', 'show']);
